--- a/index.html
+++ b/index.html
@@ -5,10 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Modo Queso</title>
     <link rel="stylesheet" href="css/styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins" rel="stylesheet">
 </head>
 <body>
     <div class="wrapper">
-        <p>MODO QUESO</p>
+        <div class="titulo">
+            <h2>MODO<br>
+                QUESO</h2>
+        </div>
+        <label class="switch">
+            <input type="checkbox">
+            <span class="slider round"></span>
+        </label>
     </div>
     
 </body>
